[project]
name = "tokenflow"
version = "0.1.0"
description = "Question-conditioned visual evidence selection on the TokenFlow VQA grid"
requires-python = ">=3.11"
dependencies = [
  "accelerate>=0.31",
  "datasets==2.20.0",
  "einops>=0.6",
  "ftfy>=6.0",
  "hf_transfer>=0.1.9",
  "huggingface_hub==0.24.5",
  "matplotlib>=3.8",
  "numpy>=1.26,<2",
  "peft>=0.13",
  "pillow>=10.0",
  "timm==1.0.9",
  "torch>=2.2",
  "torchvision>=0.17",
  "transformers==4.43.4",
]

[tool.uv]
package = false
